[package]
name = "taiko"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midly = "0.5.3"
clap = { version = "4.1.4", features = ["derive"] }
serde_json = "1.0.91"
serde_derive = "1.0.152"
serde = "1.0.152"

[profile.release]
strip = true
lto = true
codegen-units = 1
