[package]
name = "taiko"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midly = "0.5.3"
clap = { version = "4.1.4", features = ["derive"] }
serde_json = "1.0.91"
serde_derive = "1.0.152"
serde = "1.0.152"
rfd = "0.11.0"
tracing-subscriber = "0.3.16"
eframe = "0.20.1"

[profile.release]
strip = true
lto = true
codegen-units = 1
